--- a/src/app/home/home/home.component.html
+++ b/src/app/home/home/home.component.html
@@ -8,7 +8,7 @@
             <div class="col-xl-3">
             </div>
             <div class="col-xl-6">
-            <img src="/assets/imagenes/libro rojo.jpg" id="libroRojo">
+            <img src="/assets/imagenes/librorojo.jpg" id="libroRojo">
             </div>
             <div class="col-xl-3">
             </div>
