--- a/src/app/home/home/home.component.css
+++ b/src/app/home/home/home.component.css
@@ -1,40 +1,38 @@
-#libroRojo{
-    height: 250px;
-    width: 250px;
-    margin-top: 3rem;
-    margin-bottom: 2rem;
-    margin-left: -50px;
+.login-container {
+  margin-top: 5%;
+  margin-bottom: 5%;
 }
 
-input.form-control{
-    width: 4in;
+.login-form-1 {
+  padding: 5%;
+  box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.2), 0 9px 26px 0 rgba(0, 0, 0, 0.19);
 }
 
-label.form-label{
-
-    text-align: left;
-
-}
-label.form-check-label{
-    text-align: left;
-    margin-left: -150px;
+.login-form-1 h3 {
+  text-align: center;
+  color: #333;
 }
 
-#lineaInferior{
-    margin-top:-2rem;
-    height: 3rem;
-    background-color: #004d40;
-    font-weight: bold;
-    font-size: 16px;
-    color: white;
-    border-top-color: #fdd835;
-    border-style: solid;
-    border-left-color: #004d40;
-    border-right-color: #004d40;
-    border-bottom-color: #004d00;
+.login-container form {
+  padding: 10%;
 }
 
-button{
-    background-color: #004d40;
-    margin-bottom: 2rem;
+.btnSubmit {
+  width: 50%;
+  border-radius: 1rem;
+  padding: 1.5%;
+  border: none;
+  cursor: pointer;
+}
+
+.login-form-1 .btnSubmit {
+  font-weight: 600;
+  color: #fff;
+  background-color: #0062cc;
+}
+
+.login-form-1 .ForgetPwd {
+  color: #004d40;
+  font-weight: 600;
+  text-decoration: none;
 }
