busqueda-item y modificado administrador

--- a/src/app/administrador/administrador/administrador.component.html
+++ b/src/app/administrador/administrador/administrador.component.html
@@ -4,14 +4,11 @@
 
 <ul class="nav">
   <li class="nav-item">
-    <a class="nav-link" routerLink="/vehiculos/formulariovehiculo">Alta Vehículo</a>
+    <a class="nav-link" routerLink="/formulario">Alta Vehículo</a>
   </li>
   <li class="nav-item">
     <a class="nav-link" routerLink="/vehiculos">Listado Vehículos</a>
   </li>
-  <!-- <li class="nav-item">
-        <a class="nav-link" routerLink="/vehiculos/planespreventivos">Planes Preventivos</a>
-    </li> -->
 </ul>
 
 <br>
