--- a/src/app/core/not-found/not-found.component.html
+++ b/src/app/core/not-found/not-found.component.html
@@ -1,32 +1,22 @@
-<main>
-  <main class="container-fluid">
-    <div class="row" id="lineaInferior">
-        <div class="col-xl-3">
-        </div>
-    </div>
-    <div class="container-fluid">
-      <div class="row" id="notfound">
-        <div class="col"><a class="nav-link home" routerLink="/" routerLinkActive="router-link-active">
-            <img class="emblemaGC img-fluid" src="/assets/imagenes/emblemagcnuevo.png"
-              alt="GC"></a>
-        </div>
-        <div class="col">
-          <h1 class="text-center mt-4">Not Found</h1>
-        </div>
-        <div class="col">
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-sm-4">
-        </div>
-        <div class="col-sm-4">
-          <h2 class="text-center">&nbsp;&nbsp;&nbsp;Error 404</h2>
-        <a class="nav-link home" routerLink="/" routerLinkActive="router-link-active">
-            <fa-icon [icon]="home" id="iconoHome"></fa-icon> Inicio
-          </a>
-        </div>
-      </div>
-    </div>
+<div class="row" id="lineaInferior">
+  <h2>Not-Found</h2>
+</div>
+
+<div class="d-flex align-items-center justify-content-center">
+  <div class="text-center">
+
+    <br><br><br>
+    <h1 class="display-1 fw-bold text-success">404</h1>
+    <br>
+    <p class="fs-3"> Página no encontrada</p>
+    <br>
+    <picture>
+      <img id="librorojo" src="\assets\imagenes\librorojo.jpg" class="mx-auto d-block" style="width:25%">
+    </picture>
+    <br>
+    <br>
+    <a routerLink="/" class="btn btn-success">Home</a>
     <br><br><br><br><br>
-  </main>
-  
+
+  </div>
+</div>
