texto linea inferior

--- a/src/app/administrador/administrador/administrador.component.html
+++ b/src/app/administrador/administrador/administrador.component.html
@@ -1,5 +1,6 @@
 <div class="row" id="lineaInferior">
-  <h2>Administrador</h2>
+  <p></p>
+  <p class="fs-2">Administrador</p>
 </div>
 
 <ul class="nav">
