--- a/src/app/core/not-found/not-found.component.html
+++ b/src/app/core/not-found/not-found.component.html
@@ -1,14 +1,17 @@
 <div class="row" id="lineaInferior">
-  <h2>Not-Found</h2>
+  <p></p>
+  <p class="fs-2">Not-Found</p>
 </div>
 
 <div class="d-flex align-items-center justify-content-center">
   <div class="text-center">
 
-    <br><br><br>
-    <h1 class="display-1 fw-bold text-success">404</h1>
+    <br><br><br><br><br>
+    <p class="display-1 fw-bold text-success">404</p>
     <br>
     <p class="fs-3"> Página no encontrada</p>
+    <br>
+    <br>
     <br>
     <picture>
       <img id="librorojo" src="\assets\imagenes\librorojo.jpg" class="mx-auto d-block" style="width:25%">
@@ -16,7 +19,7 @@
     <br>
     <br>
     <a routerLink="/" class="btn btn-success">Home</a>
-    <br><br><br><br><br>
+    <br><br><br><br><br><br><br>
 
   </div>
 </div>
