--- a/src/app/vehiculo/formulario/formulario.component.html
+++ b/src/app/vehiculo/formulario/formulario.component.html
@@ -1,92 +1,112 @@
 <div class="row" id="lineaInferior">
-  <div class="col-xl-3">
-    <h3>Administrador</h3>
-  </div>
+  <p></p>
+  <p class="fs-2">Alta Vehículo</p>
 </div>
 
-
 <mat-stepper #stepper>
+
+  <!-- Primer step -->
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
       <ng-template matStepLabel>DATOS IDENTIFICATIVOS</ng-template>
+
+      <br>
+
       <div class="row">
-        <div class="col-xl-4"></div>
-        <div class="col-xl-8">
-          <mat-form-field appearance="fill">
-            <mat-label>Matricula:</mat-label>
+
+        <div class="col-xl-6">
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Matrícula</mat-label>
             <input type="text" matInput placeholder="PGCxxxxA" formControlName="matricula"
               [(ngModel)]="vehiculo.matricula" maxlength="8" minlength="8" required />
           </mat-form-field>
         </div>
-      </div>
-      <div class="row">
-        <div class="col-xl-4"></div>
-        <div class="col-xl-8">
-          <mat-form-field appearance="fill">
-            <mat-label>Fecha Alta:</mat-label>
-            <input type="date" matInput placeholder="dd/mm/aaaa" formControlName="fechaAlta"
+
+        <div class="col-xl-6">
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Fecha Alta</mat-label>
+            <input type="date" matInput placeholder="mm/dd/aaaa" formControlName="fechaAlta"
               [(ngModel)]="vehiculo.fechaAlta" required />
           </mat-form-field>
         </div>
+
       </div>
+
+      <br>
       <hr>
-      <div class="row"><br><br>
+      <br>
+
+      <div class="row">
+
         <div class="col-xl-4">
-          <mat-form-field appearance="fill">
-            <mat-label>Marca:</mat-label>
-            <input type="text" matInput placeholder="Nissan" formControlName="marca" [(ngModel)]="vehiculo.marca"
-              required />
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Marca</mat-label>
+            <input type="text" matInput formControlName="marca" [(ngModel)]="vehiculo.marca" required />
           </mat-form-field>
         </div>
+
         <div class="col-xl-4">
-          <mat-form-field appearance="fill">
-            <mat-label>Modelo:</mat-label>
-            <input type="text" matInput placeholder="Qasqai 2.0" formControlName="modelo" [(ngModel)]="vehiculo.modelo"
-              required />
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Modelo</mat-label>
+            <input type="text" matInput formControlName="modelo" [(ngModel)]="vehiculo.modelo" required />
           </mat-form-field>
         </div>
+
         <div class="col-xl-4">
-          <mat-form-field>
-            <mat-label>Tipo de Vehículo:</mat-label>
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Tipo Vehículo</mat-label>
             <mat-select matInput type="text" formControlName="tipoVehiculo" [(ngModel)]="vehiculo.tipo" required>
               <mat-option selected></mat-option>
               <mat-option value="Turismo">Turismo</mat-option>
-              <mat-option value="Todo Terreno">Todo terreno</mat-option>
+              <mat-option value="Todo Terreno">Todo Terreno</mat-option>
               <mat-option value="Motocicleta">Motocicleta</mat-option>
               <mat-option value="Otros">Otros</mat-option>
             </mat-select>
           </mat-form-field>
         </div>
+
       </div>
+
       <br>
+      <hr>
       <br>
-      <div class="row"><br><br>
-        <hr>
-        <div class="col-xl-2"></div>
-        <div class="col-xl-4">
-          <mat-form-field appearance="fill">
-            <mat-label>Unidad de Destino:</mat-label>
+
+      <div class="row">
+
+        <div class="col-xl-6">
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Unidad Destino</mat-label>
             <input type="text" matInput placeholder="Puesto de Adamuz" formControlName="unidadDestino"
               [(ngModel)]="vehiculo.unidadDestino" required />
           </mat-form-field>
         </div>
-        <div class="col-xl-4">
-          <mat-form-field appearance="fill">
-            <mat-label>Fecha Adjudicación:</mat-label>
+
+        <div class="col-xl-6">
+          <mat-form-field class="fs-5" appearance="outline">
+            <mat-label>Fecha Adjudicación</mat-label>
             <input type="date" matInput placeholder="dd/mm/aaaa" formControlName="fechaAdjudicacion"
               [(ngModel)]="vehiculo.fechaAdjudicacion" required />
           </mat-form-field>
         </div>
+
       </div>
-      <hr>
+
+      <br>
+
       <div>
-        <button mat-button matStepperNext [disabled]="">Siguiente</button>
+        <button class="btn btn-primary btn-md" mat-button matStepperNext [disabled]="">Siguiente</button>
       </div>
+
+      <br>
+
     </form>
   </mat-step>
+
+  <!-- Segundo step -->
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
       <ng-template matStepLabel>DATOS TÉCNICOS DE INTERES</ng-template>
+
       <div class="row">
         <div class="col-sm-3">
           <mat-form-field appearance="fill">
@@ -161,7 +181,8 @@
           <div class="col-xl-4">
             <mat-form-field appearance="fill">
               <mat-label>Lubricante:</mat-label>
-              <input type="text" matInput placeholder="5W30 SYNTETIC" formControlName="lubricanteMotor" [(ngModel)]="datosTecnicosInteres.lubricanteMotor" required />
+              <input type="text" matInput placeholder="5W30 SYNTETIC" formControlName="lubricanteMotor"
+                [(ngModel)]="datosTecnicosInteres.lubricanteMotor" required />
             </mat-form-field>
           </div>
           <div class="col-xl-4">
@@ -233,15 +254,20 @@
         </div>
         <hr>
         <div>
-          <button mat-button matStepperPrevious>Atrás</button>
-          <button mat-button matStepperNext>Siguiente</button>
+          <button class="btn btn-warning btn-md" mat-button matStepperPrevious>Atrás</button>
+          &nbsp;&nbsp;&nbsp;
+          <button class="btn btn-primary btn-md" mat-button matStepperNext>Siguiente</button>
         </div>
       </div>
+
     </form>
   </mat-step>
+
+  <!-- Tercer step -->
   <mat-step [stepControl]="thirdFormGroup">
     <form [formGroup]="thirdFormGroup">
       <ng-template matStepLabel> PLAN PREVENTIVO</ng-template>
+
       <div class="container overflow-hidden text-center">
         <div class="row gx-5">
           <mat-form-field>
@@ -437,15 +463,17 @@
       </div>
 
       <div class="row">
-        <mat-label> * Operaciones Sistemáticas: Cambio de aceite motor, inspeccion general del vehiculo(estado neumáticos,faros, luces, frenos, limpiaparabrisas, dirección...)  </mat-label>
+        <mat-label> * Operaciones Sistemáticas: Cambio de aceite motor, inspeccion general del vehiculo(estado
+          neumáticos,faros, luces, frenos, limpiaparabrisas, dirección...) </mat-label>
       </div>
       <br><br>
       <div>
-        <button mat-button matStepperPrevious>Atrás</button>
-        <a routerLink="/vehiculos"><button mat-button (click)="onAddVehiculo()">Guardar</button></a>
+        <button class="btn btn-warning btn-md" mat-button matStepperPrevious>Atrás</button>
+        &nbsp;&nbsp;&nbsp;
+        <a routerLink="/vehiculos"><button class="btn btn-primary btn-md" mat-button (click)="onAddVehiculo()">Guardar</button></a>
       </div>
+
     </form>
   </mat-step>
+
 </mat-stepper>
-
-
