--- a/src/app/vehiculo/formulario/formulario.component.html
+++ b/src/app/vehiculo/formulario/formulario.component.html
@@ -8,7 +8,7 @@
   <!-- Primer step -->
   <mat-step [stepControl]="firstFormGroup">
     <form [formGroup]="firstFormGroup">
-      <ng-template matStepLabel>DATOS IDENTIFICATIVOS</ng-template>
+    <ng-template matStepLabel>DATOS IDENTIFICATIVOS</ng-template>
 
       <br>
 
@@ -105,57 +105,68 @@
   <!-- Segundo step -->
   <mat-step [stepControl]="secondFormGroup">
     <form [formGroup]="secondFormGroup">
-      <ng-template matStepLabel>DATOS TÉCNICOS DE INTERES</ng-template>
+    <ng-template matStepLabel>DATOS TÉCNICOS DE INTERES</ng-template>
+
+      <br>
 
       <div class="row">
-        <div class="col-sm-3">
-          <mat-form-field appearance="fill">
-            <mat-label>Nº Bastidor:</mat-label>
+
+        <div class="col-xl-3">
+          <mat-form-field class="fs-6" appearance="outline">
+            <mat-label>Nº Bastidor</mat-label>
             <input type="text" matInput placeholder="vdbnkplpkffej32442" formControlName="bastidor"
               [(ngModel)]="datosTecnicosInteres.bastidor" required />
           </mat-form-field>
         </div>
-        <div class="col-sm-3">
-          <mat-form-field appearance="fill">
-            <mat-label>Color Carrocería:</mat-label>
-            <input type="text" matInput placeholder="bicolor" formControlName="color"
+
+        <div class="col-xl-3">
+          <mat-form-field class="fs-6" appearance="outline">
+            <mat-label>Color Carrocería</mat-label>
+            <input type="text" matInput placeholder="Bicolor" formControlName="color"
               [(ngModel)]="datosTecnicosInteres.color" required />
           </mat-form-field>
-          <div class="col-sm-3">
-            <mat-form-field>
-              <mat-label>Clasificación Mediambiental:</mat-label>
-              <mat-select matInput type="text" formControlName="clasificacionMedioambiental"
-                [(ngModel)]="datosTecnicosInteres.clasificacionMedioambiental" required>
-                <mat-option selected></mat-option>
-                <mat-option value="A">A</mat-option>
-                <mat-option value="B">B</mat-option>
-                <mat-option value="C">C</mat-option>
-                <mat-option value="ECO">ECO</mat-option>
-                <mat-option value="CERO">CERO</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
-          <div class="col-sm-3">
-            <mat-form-field>
-              <mat-label>Tipo de Cambio:</mat-label>
-              <mat-select matInput type="text" formControlName="cambio" [(ngModel)]="datosTecnicosInteres.cambio"
-                required>
-                <mat-option selected></mat-option>
-                <mat-option value="Manual">Manual</mat-option>
-                <mat-option value="Automatico">Automático</mat-option>
-              </mat-select>
-            </mat-form-field>
-          </div>
         </div>
-        <div class="row">
-          <h4> Combustible</h4>
-          <hr>
-          <div class="col-xl-2"></div>
-          <div class="col-xl-4">
-            <mat-form-field>
-              <mat-label>Tipo de Combustible:</mat-label>
-              <mat-select matInput formControlName="combustible" [(ngModel)]="datosTecnicosInteres.combustible"
-                required>
+
+        <div class="col-xl-3">
+          <mat-form-field class="fs-6" appearance="outline">
+            <mat-label>Clasif Medioambiental</mat-label>
+            <mat-select matInput type="text" formControlName="clasificacionMedioambiental" 
+              [(ngModel)]="datosTecnicosInteres.clasificacionMedioambiental" required>
+              <mat-option selected></mat-option>
+              <mat-option value="A">A</mat-option>
+              <mat-option value="B">B</mat-option>
+              <mat-option value="C">C</mat-option>
+              <mat-option value="ECO">ECO</mat-option>
+              <mat-option value="CERO">CERO</mat-option>
+            </mat-select>
+            </mat-form-field>
+        </div>
+
+        <div class="col-xl-3">
+          <mat-form-field class="fs-6" appearance="outline">
+            <mat-label>Tipo Cambio</mat-label>
+            <mat-select matInput type="text" formControlName="cambio" [(ngModel)]="datosTecnicosInteres.cambio" required>
+              <mat-option selected></mat-option>
+              <mat-option value="Manual">Manual</mat-option>
+              <mat-option value="Automatico">Automático</mat-option>
+            </mat-select>
+            </mat-form-field>
+        </div>
+
+      </div>
+
+      <br>
+      <hr>
+      <br>
+
+      <div class="row">
+        <p class="fs-5">Combustible</p>
+
+          <div class="col-xl-6">
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Tipo Combustible</mat-label>
+              <mat-select matInput type="text" formControlName="combustible" 
+                [(ngModel)]="datosTecnicosInteres.combustible" required>
                 <mat-option selected></mat-option>
                 <mat-option value="Diesel">Diesel</mat-option>
                 <mat-option value="Gasolina">Gasolina</mat-option>
@@ -165,100 +176,125 @@
               </mat-select>
             </mat-form-field>
           </div>
-          <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Capacidad Depósito:</mat-label>
-              <input type="number" matInput placeholder="55 litros" formControlName="capacidadDeposito"
-                [(ngModel)]="datosTecnicosInteres.capacidadDeposito" required /><span>&nbsp;Litros</span>
+
+          <div class="col-xl-6">
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Capacidad Depósito</mat-label>
+              <input type="number" matInput formControlName="capacidadDeposito"
+                [(ngModel)]="datosTecnicosInteres.capacidadDeposito" required />
             </mat-form-field>
           </div>
-        </div>
-        <hr>
-        <div class="row">
-          <h4> Aceite</h4>
-          <hr>
-          <div class="col-xl-2"></div>
-          <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Lubricante:</mat-label>
-              <input type="text" matInput placeholder="5W30 SYNTETIC" formControlName="lubricanteMotor"
+
+      </div>
+
+      <br>
+      <hr>
+      <br>
+
+      <div class="row">
+        <p class="fs-5">Aceite</p>
+
+          <div class="col-xl-6">
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Lubricante</mat-label>
+              <input type="text" matInput formControlName="lubricanteMotor"
                 [(ngModel)]="datosTecnicosInteres.lubricanteMotor" required />
             </mat-form-field>
           </div>
-          <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Capacidad Carter:</mat-label>
-              <input type="number" matInput placeholder="8 litros" formControlName="capacidadCarter"
-                [(ngModel)]="datosTecnicosInteres.capacidadCarter" required /><span>&nbsp;Litros</span>
+
+          <div class="col-xl-6">
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Capacidad Carter</mat-label>
+              <input type="number" matInput placeholder="Litros" formControlName="capacidadCarter"
+                [(ngModel)]="datosTecnicosInteres.capacidadCarter" required />
             </mat-form-field>
           </div>
-        </div>
-        <hr>
-        <div class="row">
-          <h4>Neumáticos</h4>
-          <hr>
+
+      </div>
+
+      <br>
+      <hr>
+      <br>
+
+      <div class="row">
+        <p class="fs-5">Neumáticos</p>
+
           <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Presión Neumáticos/Delanteros:</mat-label>
-              <input type="number" matInput placeholder="2,3 bar" formControlName="presionNeumaticosDelanteros"
-                [(ngModel)]="datosTecnicosInteres.presionNeumaticosDelanteros" required /><span>&nbsp;bar</span>
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Presión Delanteros</mat-label>
+              <input type="number" matInput placeholder="bar" formControlName="presionNeumaticosDelanteros"
+                [(ngModel)]="datosTecnicosInteres.presionNeumaticosDelanteros" required />
             </mat-form-field>
           </div>
+
           <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Presión Neumáticos/Traseros:</mat-label>
-              <input type="number" matInput placeholder="2,3 bar" formControlName="presionNeumaticosTraseros"
-                [(ngModel)]="datosTecnicosInteres.presionNeumaticosTraseros" required /><span>&nbsp;bar</span>
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Presión Traseros</mat-label>
+              <input type="number" matInput placeholder="bar" formControlName="presionNeumaticosTraseros"
+                [(ngModel)]="datosTecnicosInteres.presionNeumaticosTraseros" required />
             </mat-form-field>
           </div>
+
           <div class="col-xl-4">
-            <mat-form-field appearance="fill">
-              <mat-label>Tipo Cubiertas:</mat-label>
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Tipo Cubiertas</mat-label>
               <input type="text" matInput placeholder="255/R17Y" formControlName="tipoCubiertas"
                 [(ngModel)]="datosTecnicosInteres.tipoCubiertas" required />
             </mat-form-field>
           </div>
-        </div>
-        <hr>
-        <div class="row">
-          <h4>Bateria</h4>
-          <hr>
+
+      </div>
+
+      <br>
+      <hr>
+      <br>
+
+      <div class="row">
+        <p class="fs-5">Baterías</p>
+
           <div class="col-xl-3">
-            <mat-form-field appearance="fill">
-              <mat-label>Numero de Baterías:</mat-label>
-              <input type="number" matInput placeholder="2 baterías" formControlName="numeroBaterias"
-                [(ngModel)]="datosTecnicosInteres.numeroBaterias" required /><span>&nbsp;baterías</span>
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Nº Baterías</mat-label>
+              <input type="number" matInput formControlName="numeroBaterias"
+                [(ngModel)]="datosTecnicosInteres.numeroBaterias" required />
             </mat-form-field>
           </div>
+
           <div class="col-xl-3">
-            <mat-form-field appearance="fill">
-              <mat-label>Amperios/Hora:</mat-label>
-              <input type="number" matInput placeholder=" 2 amp/h" formControlName="amperiosHoraBaterias"
-                [(ngModel)]="datosTecnicosInteres.amperiosHoraBaterias" required /><span>&nbsp;amp/h</span>
+            <mat-form-field class="fs-6" appearance="outline">
+              <mat-label>Amperios/Hora</mat-label>
+              <input type="number" matInput formControlName="amperiosHoraBaterias"
+                [(ngModel)]="datosTecnicosInteres.amperiosHoraBaterias" required />
             </mat-form-field>
           </div>
+
           <div class="col-xl-3">
-            <mat-form-field appearance="fill">
+            <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Amperaje:</mat-label>
               <input type="number" matInput placeholder="10 amp" formControlName="amperajeBaterias"
-                [(ngModel)]="datosTecnicosInteres.amperajeBaterias" required /><span>&nbsp;amp</span>
+                [(ngModel)]="datosTecnicosInteres.amperajeBaterias" required />
             </mat-form-field>
           </div>
+
           <div class="col-xl-3">
-            <mat-form-field appearance="fill">
+            <mat-form-field class="fs-6" appearance="outline">
               <mat-label>Voltaje:</mat-label>
-              <input type="number" matInput placeholder="12 V" formControlName="voltajeBaterias"
-                [(ngModel)]="datosTecnicosInteres.voltajeBaterias" required /><span>&nbsp;V</span>
+              <input type="number" matInput placeholder="V" formControlName="voltajeBaterias"
+                [(ngModel)]="datosTecnicosInteres.voltajeBaterias" required />
             </mat-form-field>
           </div>
-        </div>
-        <hr>
-        <div>
-          <button class="btn btn-warning btn-md" mat-button matStepperPrevious>Atrás</button>
-          &nbsp;&nbsp;&nbsp;
-          <button class="btn btn-primary btn-md" mat-button matStepperNext>Siguiente</button>
-        </div>
+
       </div>
+
+      <br><br>
+
+      <div>
+        <button class="btn btn-warning btn-md" mat-button matStepperPrevious>Atrás</button>
+          &nbsp;&nbsp;&nbsp;
+        <button class="btn btn-primary btn-md" mat-button matStepperNext>Siguiente</button>
+      </div>
+
+      <br>
 
     </form>
   </mat-step>
