--- a/src/app/vehiculo/vehiculos/vehiculo-consulta/vehiculo-consulta.component.css
+++ b/src/app/vehiculo/vehiculos/vehiculo-consulta/vehiculo-consulta.component.css
@@ -1,34 +1,3 @@
-#lineaInferior{
-    margin-top:-2rem;
-    height: 3rem;
-    background-color: #004d40;
-    font-weight: bold;
-    font-size: 16px;
-    color: white;
-    border-top-color: #fdd835;
-    border-style: solid;
-    border-left-color: #004d40;
-    border-right-color: #004d40;
-    border-bottom-color: #004d00;
-}
-li.nav-item, .dropdown-item{
-    height: 3rem;
-    background-color: #004d40;
-    font-weight: bold;
-    font-size: 16px;
-    border-top-color: #fdd835;
-    border-style: solid;
-    border-left-color: #fdd835;
-    border-right-color: #fdd835;
-    color:#fdd835;
-    
-}
-
-#datos, #mantenimiento{
-    color: #fdd835;
-}
-
-h1{
-    font-weight: bolder;
-    color: #fdd835;
+.mat-form-field {
+    margin-top: 34px;
 }
