boton nuevo mantenimiento

--- a/src/app/administrador/busqueda-item/busqueda-item.component.html
+++ b/src/app/administrador/busqueda-item/busqueda-item.component.html
@@ -7,7 +7,7 @@
             <div class="col-4">
                 <h2>{{ vehiculo.matricula.toUpperCase() }} &nbsp; {{ vehiculo.marca.toUpperCase() }} &nbsp; {{ vehiculo.modelo.toUpperCase() }}</h2>
             </div>
-            <div class="col-4">
+            <div class="col-6">
                 <button type="button" class="btn btn-primary btn-md" (click)="consultar()">
                     Consultar
                 </button>
@@ -18,6 +18,10 @@
                 &nbsp; &nbsp; &nbsp; &nbsp;
                 <button type="button" class="btn btn-danger btn-md" (click)="eliminar()">
                     Eliminar
+                </button>
+                &nbsp; &nbsp; &nbsp; &nbsp;
+                <button type="button" class="btn btn-success btn-md" [routerLink]="['/mantenimientoForm', vehiculo.id]">
+                    Nuevo mantenimiento 
                 </button>
             </div>
         </div>
