linea inferior editar

--- a/src/app/vehiculo/vehiculos/vehiculo-editar/vehiculo-editar.component.html
+++ b/src/app/vehiculo/vehiculos/vehiculo-editar/vehiculo-editar.component.html
@@ -1,6 +1,6 @@
 <div class="row" id="lineaInferior">
   <p></p>
-  <p class="fs-2">Alta Vehículo</p>
+  <p class="fs-2">Editar {{ vehiculo.matricula.toLocaleUpperCase() }}</p>
 </div>
 
 <mat-stepper #stepper>
